...

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtName"
        android:hint="Type a name for a task..." />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Description:"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginLeft="0dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:layout_marginTop="5dp">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="date"
...
                android:layout_marginLeft="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/btnDateDeadline"
                android:background="@drawable/ic_event_note_24dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
...
