...
              android:gravity="center_vertical">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:id="@+id/tasks_categories_buttons">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
...
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_green_300"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/over_due_btn">

                <TextView
                        android:id="@+id/over_due_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/vector_drawable_ic_error_outline_black___px"
...
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_green_300"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/actual_btn">

                <TextView
                        android:id="@+id/actual_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_access_time_24dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_green_800"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/add_task_btn"
                    android:clickable="true">

                <TextView
                        android:id="@+id/add_task_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
