<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/task_list">

    </FrameLayout>



    <ScrollView
        android:id="@+id/request_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark">

        <TableLayout
            android:id="@+id/request_items_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1"></TableLayout>
    </ScrollView>

</RelativeLayout>